Fix waves not well rendered on Firefox small screens

--- a/src/components/Home/Header.module.css
+++ b/src/components/Home/Header.module.css
@@ -85,7 +85,7 @@
   display: flex;
   position: relative;
   top: 5px;
-  transform: scaleX(1.1);
+  transform: scaleX(1.2);
 }
 
 .ellipse1 {
